--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,379 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin-top: 0%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#wholePage {
+    width: 75vw;
+    margin: auto;
+}
+
+#top {
+    margin: auto;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    width: 75vw;
+    height: 40vh;
+}
+
+#logo {
+    position: fixed;
+    height: 20vh;
+    width: 12vw;
+    z-index: 5;
+    border-radius: 50%;
+    background-color: #090934;
+    transform: rotate(-15deg);
+    box-shadow: 7px 30px 115px #448d76;
+}
+
+#slideContainer img {
+    justify-content: flex-start;
+    height: 35vh;
+    width: 75vw;
+    z-index: 4;
+}
+
+#navbar {
+    display: flex;
+    flex-direction: row;
+    column-gap: 5%;
+    justify-content: space-around;
+    background-color: #090934;
+    padding: 1.5% 0px 1.5% 0px;
+    align-items: center;
+    height: 10%;
+    width: 75vw;
+    position: sticky;
+}
+
+.links {
+    display: flex;
+    column-gap: 10%;
+}
+
+.NavLink {
+    font-size: 20px;
+    border: none;
+    text-decoration: none;
+    color: #d4f7ec;
+}
+
+.NavLink:hover {
+    color: #1258dc;
+}
+
+.formContainer {
+    padding: 1%;
+    bottom: 8%;
+    position: absolute;
+    width: 45%;
+    left: 25%;
+    background-color: white;
+}
+
+.signButton {
+    font-size: 15px;
+    width: 8vw;
+    border: none;
+    background-color: #090934;
+    color: #d4f7ec;
+    font-weight: bold;
+    font-family: sans-serif;
+    cursor: pointer;
+    margin-right: 5px;
+}
+
+.signButton:hover {
+    color: #2E2FE3;
+}
+
+#registerForm {
+    position: absolute;
+    top: 138px;
+    left: 17%;
+    padding: 16px;
+    width: 60%;
+    margin-right: 20%;
+}
+
+.registerButton {
+    font-family: sans-serif;
+    color: #d4f7ec;
+    font-size: 15px;
+    width: 8vw;
+    border: none;
+    background-color: #090934;
+    font-weight: bolder;
+    cursor: pointer;
+    border-radius: 30px;
+}
+
+.registerButton:hover {
+    color: #1258dc;
+}
+
+#registerButton {
+    font-family: sans-serif;
+    color: #d4f7ec;
+    font-size: 15px;
+    width: 8vw;
+    border: none;
+    padding: 7px 0;
+    background-color: #090934;
+    font-weight: bolder;
+    cursor: pointer;
+    border-radius: 30px;
+}
+
+input[type=text],
+input[type=password] {
+    width: 50%;
+    padding: 15px;
+    margin: 20px 10px 22px 0;
+    display: block;
+    border: none;
+    background: #d4f7ec;
+}
+
+input[type=text]:focus,
+input[type=password]:focus {
+    background-color: #adf2dc;
+    outline: none;
+}
+
+
+input[type=text],
+input[type=password] {
+    width: 100%;
+    padding: 10px 15px;
+    margin: 6px 0;
+    display: inline-block;
+    border: 1px solid #0000;
+    box-sizing: border-box;
+}
+
+#searchPopUp {
+    position: fixed;
+    height: 200px;
+    width: auto;
+    background-color: #448D76;
+    color: #090934
+}
+
+#search {
+    height: 1.5vh;
+    width: 24.5vw;
+    background-color: white;  
+    font-weight: bolder;
+}
+
+.searchButton {
+    background-color: #090934;
+    color: #d4f7ec;
+    border: none;
+}
+
+#logInClick {
+    padding: 7px 0;
+    width: 6vw;
+    border: none;
+    border-radius: 30px;
+    background-color: #090934;
+    color: white;
+    margin-top: 9%;
+}
+
+#logInClick:hover {
+    color: #1258dc;
+}
+
+.photos{
+box-shadow: 4px 3px 6px black;
+}
+
+
+@media only screen and (max-width: 4000px) {
+    #smallNav {
+        display: none;
+    }
+
+    .mobileSign {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    #wholePage {
+        width: 100vw;
+        margin: auto;
+    }
+
+    #wholeContainer {
+        width: 100vw;
+    }
+
+    #top {
+        width: 100%;
+    }
+
+    #slideContainer img {
+        width: 100vw;
+    }
+
+
+    #bigNav {
+        display: none;
+    }
+
+    #navbar {
+        width: 100vw;
+    }
+
+    #smallNav {
+        display: block;
+    }
+
+    .mobileSign {
+        display: block;
+    }
+
+    .signButton {
+        position: absolute;
+        left: 75%;
+        bottom: 70%;
+        border-radius: 30px;
+    }
+
+    .registerButton {
+        position: absolute;
+        left: 60%;
+        bottom: 70%;
+        width: 8vw;
+    }
+
+
+    #MobileNavBar {
+        display: flex;
+        flex-direction: row;
+        width: 80vw;
+    }
+
+    .HamburgerBar {
+        width: 35px;
+        height: 5px;
+        background-color: #5b5bf8;
+        margin: 6px 0;
+        z-index: 5;
+    }
+
+    .Locations {
+        width: 58px;
+        height: 5px;
+        color: black;
+        font-size: 18px;
+        text-shadow: 1px 1px #d4f7ec;
+    }
+
+    .LocationLink {
+        margin-right: 3%;
+        background-color: #1258dc;
+    }
+
+    #TheHamburgerDiv {
+        position: sticky;
+        width: 35px;
+        margin: 6px 0;
+        z-index: 5;
+    }
+
+    .searchElements {
+        width: 100vw;
+    }
+
+    .searchDiv {
+        margin-right: 1vw;
+        width: 100%;
+    }
+
+    #search {
+        margin-left: 15%;
+        width: 50%;
+    }
+
+    .searchButton {
+        margin-left: 1%;
+        margin-right: 1%;
+        flex-direction: row;
+    }
+}
+
+@media only screen and (max-width: 599px) {
+
+    .Locations {
+        width: 125%;
+    }
+
+    .LocationLink {
+        display: flex;
+        font-size: 20px;
+    }
+
+    .signButton {
+        width: 18vw;
+        margin-left: 5%;
+    }
+
+
+    .formContainer {
+        height: 20vh;
+        margin-bottom: 95%;
+    }
+
+    .registerButton {
+        width: 19vw;
+    }
+
+    #registerButton {
+        width: 18vw
+    }
+
+    #registerForm {
+        width: 70%;
+        position: absolute;
+        top: 135px;
+        right: 70%;
+        padding: 16px;
+        background-color: white;
+    }
+
+    #logInClick {
+        width: 55%;
+    }
+
+    /* input[type=text],
+    input[type=password] {
+        width: 100%;
+        padding: 15px;
+        margin: 20px 10px 22px 0;
+        display: block;
+        border: none;
+        background: #d4f7ec;
+    } */
+
+    /* input[type=text]:focus,
+    input[type=password]:focus {
+        background-color: #adf2dc;
+        outline: none;
+    }
+
+    input[type=text],
+    input[type=password] {
+        width: 100%;
+        padding: 10px 15px;
+        margin: 6px 0;
+        display: inline-block;
+        border: 1px solid #0000;
+        box-sizing: border-box;
+    } */
 }
